# pos-kasir-alpiant

./: .env.example  DEPLOYMENT.md  PRODUCTION_OPTIMIZATION.md  appveyor.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts
plans/: blueprint-pos-kasir.md  dokumentasi-back-end.md  lanjutkan-besok.md  payment&hardware.md  payment.md  prd-integrasi-pembayaran-qris.md  rencana-payment.md
src/: App.tsx  index.css  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audit.rs  config.rs  encryption.rs  errors.rs  lib.rs  logger.rs  main.rs  rate_limiter.rs  validation.rs
src-tauri/src/auth/: guard.rs  mod.rs  session.rs
src-tauri/src/commands/: activity_cmd.rs  auth_cmd.rs  discount_cmd.rs  mod.rs  payment_cmd.rs  product_cmd.rs  report_cmd.rs  settings_cmd.rs  system_cmd.rs  transaction_cmd.rs  user_cmd.rs
src-tauri/src/database/: connection.rs  migrations.rs
src-tauri/src/models/: activity.rs  discount.rs  mod.rs  payment.rs  product.rs  settings.rs  transaction.rs  user.rs
src/components/: ConfirmDialog.tsx  CurrencyDisplay.tsx  DataTable.tsx  LowStockAlert.tsx  NumericInput.tsx  RoleBadge.tsx  Sidebar.tsx  ThemeToggle.tsx
src/components/ui/: alert-dialog.tsx  dialog.tsx  sheet.tsx  toast.tsx
src/hooks/: useBarcodeScanner.ts  useInvokeQuery.ts  useQrisPayment.ts  useSession.ts
src/lib/: currency.ts  tauri.ts
src/pages/: FirstSetupPage.tsx  InventoryPage.tsx  LoginPage.tsx  ManageUsersPage.tsx  POSPage.tsx  ReportsPage.tsx  SettingsPage.tsx
src/store/: authStore.ts  cartStore.ts  settingsStore.ts
src/types/: index.ts
(+24 files in other folders)
